edition and typos

--- a/reactors/preambule/rmdarticle.sty
+++ b/reactors/preambule/rmdarticle.sty
@@ -8,15 +8,15 @@
 \RequirePackage{amsthm}
 \RequirePackage{booktabs}
 \RequirePackage{fixltx2e}
-\RequirePackage{graphicx}        % graphs and figures
-\RequirePackage[utf8x]{inputenc} % utf8 encoding in source file
+\RequirePackage{graphicx}                            % graphs and figures
+\RequirePackage[utf8x]{inputenc}                     % utf8 encoding in source file
 \RequirePackage{mathtools}
-\RequirePackage[version=3]{mhchem}
+\RequirePackage[version=3,arrows=pgf-filled]{mhchem}
 \RequirePackage{microtype}
 %\RequirePackage{multicol}
 %\RequirePackage{multirow}
 %\RequirePackage[numbers]{natbib}
-\RequirePackage[draft, scrtime]{prelim2e} % Final and draft versions
+\RequirePackage[draft, scrtime]{prelim2e}            % Final and draft versions
 \RequirePackage{siunitx}
 \RequirePackage{tabularx}
 \RequirePackage{xspace}
@@ -24,9 +24,12 @@
 %%% Fonts
 % pdflatex - first style
 % sc: true small caps. osf: old style figures
+%\RequirePackage[T1]{fontenc}
+%\RequirePackage[english]{babel}
 %\RequirePackage[sc,osf]{mathpazo}     % add possibly `sc` and `osf` options
 %\RequirePackage{eulervm}              % euler math
 %\RequirePackage[scaled=0.7]{beramono} % beramono for tt
+%\RequirePackage[pdfusetitle]{hyperref} % at the end of packages
 %
 % pdflatex - second style
 \RequirePackage[T1]{fontenc}
