--- a/reactors/reactors.tex
+++ b/reactors/reactors.tex
@@ -10,12 +10,16 @@
 \input{./sections/abstract}
 \maketitle
 \tableofcontents
+\input{./sections/intro}
 \input{./sections/kinetics}
 \input{./sections/mass-balance}
 \input{./sections/chem-reactions}
-\input{./sections/notes}
+\input{./sections/energy-balance}
 
 \appendix
+\input{./sections/first-order}
+\input{./sections/batch}
+\input{./sections/notes}
 
 %\bibliographystyle{plainnat}
 %\bibliography{./sections/biblio}
