--- a/reactors/sections/notes.tex
+++ b/reactors/sections/notes.tex
@@ -5,7 +5,7 @@ Consider a vector $v$ in three dimensional (Euclidean) space, $\nespace 3$, and 
 \beq
 v = \fbvec x\rvec vx + \fbvec y\rvec vy + \fbvec z \rvec vz\,,
 \eeq
-or as in other similar fashion; \eg, the frame elements noted by $e$ instead of $\fbvec{}$; or, as in engineering, $\elset{\hat\imath, \hat\jmath, \hat k}$; then, $v = \hat{\imath}v_x + \hat{\jmath}v_y + \hat{z}v_z$.
+or as in other similar fashion; \eg, the frame elements noted by $e$ instead of $\fbvec{}$; or, as in engineering, $v = \hat{\imath}v_x + \hat{\jmath}v_y + \hat{z}v_z$.
 
 Consider, on the other hand, an alternative, more compact form of writing $v$. Begin by indexing the frame elements as $\setbuild{\fbvec i}{i:1\to 3}$. Then, relabel the components of $v$ to $\setbuild{\fvec vi}{i:1\to 3}$, where $i$ is an index and \emph{not} an exponent. Finally, use the summation notation to express $v$:
 \beq
@@ -13,7 +13,7 @@ v = \fbvec 1\fvec v1 + \fbvec 2\fvec v2 + \fbvec 3\fvec v3
   = \sum_{i = 1}^3 \fbvec i\fvec vi\,.
 \eeq
 
-Although the summation notation helps to save some typing, the Einstein summation convention goes further: by agreeing with dispensing with the summation sign and its limits, leaving only the indexed variables -- in this case, the indexed components:
+Although the summation notation helps to save some typing, Einstein summation convention goes further: by agreeing with dispensing with the summation sign and its limits, leaving only the indexed variables:
 \beq
 v = \fbvec i\fvec vi\,.
 \eeq
