--- a/reactors/preambule/physics.sty
+++ b/reactors/preambule/physics.sty
@@ -14,11 +14,11 @@
 \newcommand{\mass}{m}                    % mass
 \newcommand{\pnum}{n}                    % particle number
 \newcommand{\density}[1]{\rho_{#1}}      % density
-\newcommand{\conc}[1]{c_{\ce{#1}}}       % species concentration
+\newcommand{\conc}[1]{\sigma_{\ce{#1}}}  % species concentration
 \newcommand{\flow}[1]{\phi_{#1}}         % flow
 \newcommand{\flux}[1]{j_{#1}}            % flux
 \newcommand{\kdiff}[1]{\psi_{#1}}        % diffusion coefficient
-\newcommand{\kdisp}[1]{\sigma_{\ce{#1}}} % dispersion coefficient
+\newcommand{\kdisp}[1]{\omega_{\ce{#1}}} % dispersion coefficient
 \newcommand{\ien}{\ener\txt{int}}        % internal energy
 
 %%% Thermochem
@@ -39,14 +39,14 @@
 \newcommand{\eleq}[2]{\iod t\ipd{#2}\lag - \ipd{#1}\lag = 0} % euler-lagrange equation
 
 %%% Chemical Reactors
-\newcommand{\rrate}{r}         % reaction rate
-\newcommand{\krcoeff}{\kappa}  % reaction coefficient
-\newcommand{\kstnum}{\nu}      % stoichiometric numbers (coefficients)
-\newcommand{\rorder}{n}        % reaction order
-\newcommand{\freqfact}{A}      % prexponential or frequency factor (Arrhenius)
-\newcommand{\rtime}{\tau}      % residence time
-\newcommand{\eadist}{\epsilon} % exit age distribution
-\newcommand{\crtfrac}{\varphi} % cumulative residence time fraction
+\newcommand{\rrate}{r}             % reaction rate
+\newcommand{\krcoeff}{\kappa}      % reaction coefficient
+\newcommand{\kstnum}{\nu}          % stoichiometric numbers (coefficients)
+\newcommand{\rorder}{n}            % reaction order
+\newcommand{\freqfact}{\krcoeff_0} % prexponential or frequency factor (Arrhenius)
+\newcommand{\rtime}{\tau}          % residence time
+\newcommand{\eadist}{\Psi}         % exit age distribution (E function)
+\newcommand{\crtfrac}{\Omega}     % cumulative residence time fraction (F function)
 
 %%% Physical constants
 \newcommand{\kboltz}{k\txt{bol}}    % Boltzmann constant
@@ -58,7 +58,7 @@
 
 %%% Dim. analysis
 \DeclareMathOperator{\unit}{unit}    % unit of a quantity
-\newcommand{\kdim}{\Gamma}           % dimless quantity
+\newcommand{\kdim}{\Pi}              % dimless quantity
 \newcommand{\phdim}[1]{\mathsf{#1}}  % physical dimension
 \newcommand{\phdimtemp}{\Theta}      % physical dimension of temperature
 \newcommand{\chpq}[1]{{#1}_{c}}      % characteristic physical quantity
