--- a/lagrange/sections/summation.tex
+++ b/lagrange/sections/summation.tex
@@ -3,5 +3,7 @@ Traditionally, a vector $v$ in three dimensional space, $\nespace 3$, is written
 \beq
 v = v_1\hat x + v_2\hat y + v_3\hat z\,,
 \eeq
-where $\elset{v_1, v_2, v_3}$ are the components of $v$ and $\elset{}$
+where $\elset{v_1, v_2, v_3}$ are the components of $v$ and $\elset{\hat x, \hat y, \hat z}$ the unit vectors pointing in the direction of the Cartesian axes.
+
+
 
