style changes, toc depth changed

--- a/transport/preambule/physics.tex
+++ b/transport/preambule/physics.tex
@@ -25,7 +25,8 @@
 %
 %%% ENERGY TRANSPORT
 %
-\newcommand{\temp}{\theta}       % temperature
+%\newcommand{\temp}{\theta}      % temperature
+\newcommand{\temp}{\tau}         % temperature
 \newcommand{\then}{e}            % thermal energy (heat)
 \newcommand{\thendens}{\epsilon} % thermal energy density (E/L^3)
 \newcommand{\work}{w}
@@ -89,7 +90,7 @@
 %%% DIMENSIONAL ANALYSIS
 %
 \DeclareMathOperator{\unit}{unit}
-\newcommand{\kdim}{\Pi}          % dimless quantity
+\newcommand{\kdim}{\pi}          % dimless quantity
 %
 \newcommand{\phdim}[1]{\mathsf{#1}}% physical dimension
 \newcommand{\phdimtemp}{\Theta}   % physical dimension of temperature
