--- a/transport/preambule/preambule.tex
+++ b/transport/preambule/preambule.tex
@@ -48,6 +48,8 @@
 input-symbols = \pi\tau
 }%
 %%%
+%%% table of contents
+\setcounter{tocdepth}{1} % where n is the level (1 for sections only)
 %
 %%% LINGO
 %
