--- a/lagrange/lagrange.tex
+++ b/lagrange/lagrange.tex
@@ -10,7 +10,8 @@
 \input{./sections/abstract}
 \maketitle
 \tableofcontents
-\input{./sections/intro}
+\input{./sections/lagrange}
+\input{./sections/hamilton}
 
 \appendix
 \input{./sections/summation}
