--- a/modeling/sections/background.tex
+++ b/modeling/sections/background.tex
@@ -1,34 +1,34 @@
 \section{Problem background}
-A mathematical model of a physical phenomenon begins with the \lingo{problem background}, a little description or introduction to the subject. Specifically, it should contain:
+A mathematical model of a physical phenomenon begins with the \lingo{problem background}, a description or introduction to the object. Specifically, the background should contain:
 \begin{itemize}
-\item a \lingo{description} of the essential features of the physical process;
+\item a \lingo{description} of the essential features of the physical process and
 \item an identification of the \lingo{objectives}, the key questions requiring answers.
 \end{itemize}
 
-A guide to write down the description is the answer to the questions what, who, where, how and why. Additionally, the inclusion of graphical illustrations aids not only in the description, but also in the definition of physical quantities and the establishment of hypotheses.
+Answering what, who, where, how and why questions guides to write down the description. Additionally, including graphical illustrations aids not only in the description, but in the definition of physical quantities and the establishment of hypotheses, as well.
 
 
 \subsection{Description}
-Problem: analysis of a gravitational pendulum.
+Phenomenon: motion of a gravitational pendulum.
 
 \begin{itemize}
 \item What is a pendulum? A pendulum is a mechanical system consisting on a bob hanging by a rod attached, in turn, to a pivot.
 %
-\item What is a gravitational pendulum? A gravitational pendulum is a pendulum object only to the action of gravitational interactions.
+\item What is a gravitational pendulum? A gravitational pendulum is a pendulum object to gravitational interactions only.
 %
 \item How is the pendulum set into motion? There are basically three ways of setting a gravitational pendulum into motion:
 %
     \begin{enumerate}
-    \item by moving the bob an initial angle from its equilibrium position, $\theta_0$, at time $t = 0$;
+    \item by moving the bob from its equilibrium position to an initial angle, $\theta_0$, at time $t = 0$;
     \item by applying a force that imprints an angular velocity to the bob, $\dt\theta_0$, at time $t = 0$;
     \item or by both at the same time $t = 0$.
     \end{enumerate}
 %
-\item What keeps the pendulum moving? Once the pendulum is swinging, gravitational action keeps it moving, since an interplay between kinetic energy and gravitational potential energy is established. Kinetic energy is impressed by the initial displacement or initial forces, while the gravitational potential acts as a restoring force that moves the bob to its equilibrium position.
+\item What keeps the pendulum moving? Once the pendulum is swinging, gravitational action keeps it moving, since an interplay between kinetic energy and gravitational potential energy is established. Kinetic energy is impressed by the initial displacement or initial forces, while the gravitational potential tries to restore the bob to its equilibrium position.
 %
-\item What forces act on it to damp its motion? The pendulum motion can be damped by friction on the pivot or by drag, when the pendulum is partially or totally submerged in a viscous fluid.
+\item What forces act on it to damp its motion? Friction on the pivot or drag when the pendulum is partially or totally submerged in a viscous fluid damp the pendulum motion.
 \end{itemize}
 
 
-\subsection{Objectives}
-What we want to know, to model: A mathematical model of a pendulum seeks for a function, perhaps in a closed form, to predict how the pendulum amplitude varies with time; \ie, a function of the form $\theta\vat t$. 
+\subsection{Objective}
+To seek for a mathematical relation, perhaps in a closed form, to predict the pendulum amplitude variation with time; \ie, deduce a function of the form $\theta\vat t$. 
