--- a/modeling/modeling.tex
+++ b/modeling/modeling.tex
@@ -10,6 +10,7 @@
 \input{./sections/abstract}
 \maketitle
 \tableofcontents
+\input{./sections/guide}
 \input{./sections/background}
 \input{./sections/formulation}
 \input{./sections/analysis}
