--- a/modeling/sections/background.tex
+++ b/modeling/sections/background.tex
@@ -1,34 +1,24 @@
-\section{Problem background}
-A mathematical model of a physical phenomenon begins with the \lingo{problem background}, a description or introduction to the object. Specifically, the background should contain:
-\begin{itemize}
-\item a \lingo{description} of the essential features of the physical process and
-\item an identification of the \lingo{objectives}, the key questions requiring answers.
-\end{itemize}
-
-Answering what, who, where, how and why questions guides to write down the description. Additionally, including graphical illustrations aids not only in the description, but in the definition of physical quantities and the establishment of hypotheses, as well.
-
-
-\subsection{Description}
-Phenomenon: motion of a gravitational pendulum.
-
-\begin{itemize}
-\item What is a pendulum? A pendulum is a mechanical system consisting on a bob hanging by a rod attached, in turn, to a pivot.
+\section{Description}
+[In this section, we set the description of a physical phenomenon: the motion of a gravitational pendulum. We focus on answer the questions: what is a pendulum? what is a gravitational pendulum? How the pendulum is set into motion? What keeps the pendulum moving? What forces act on the pendulum that damp its motion?]
 %
-\item What is a gravitational pendulum? A gravitational pendulum is a pendulum object to gravitational interactions only.
-%
-\item How is the pendulum set into motion? There are basically three ways of setting a gravitational pendulum into motion:
-%
-    \begin{enumerate}
-    \item by moving the bob from its equilibrium position to an initial angle, $\theta_0$, at time $t = 0$;
-    \item by applying a force that imprints an angular velocity to the bob, $\dt\theta_0$, at time $t = 0$;
-    \item or by both at the same time $t = 0$.
-    \end{enumerate}
-%
-\item What keeps the pendulum moving? Once the pendulum is swinging, gravitational action keeps it moving, since an interplay between kinetic energy and gravitational potential energy is established. Kinetic energy is impressed by the initial displacement or initial forces, while the gravitational potential tries to restore the bob to its equilibrium position.
-%
-\item What forces act on it to damp its motion? Friction on the pivot or drag when the pendulum is partially or totally submerged in a viscous fluid damp the pendulum motion.
-\end{itemize}
+% ------------------------------------------------------------- Figure
+% position: bthH. size:width=0.5\textwidth. file:location+filename
+\docfigure{bt}{width=0.5\textwidth}{./graphs/pendulum.pdf}%
+   {Gravitational pendulum}
+   {Schema of a simple gravitational pendulum}%
+   {fig:simplegravpendulum}%
+% ------------------------------------------------------------- EndFigure
 
+A pendulum is a mechanical system consisting of a bob hanging by a rod attached, in turn, to a pivot, see \cref{fig:simplegravpendulum}. A gravitational pendulum is a pendulum object only to gravitational interactions. 
 
-\subsection{Objective}
+There are basically three ways of setting a gravitational pendulum into motion:
+\begin{enumerate}
+\item by moving the bob from its equilibrium position to an initial angle, $\theta_0$, at time $t = 0$;
+\item by applying a force that imprints an angular velocity to the bob, $\dt\theta_0$, at time $t = 0$;
+\item or by both at the same time $t = 0$.
+\end{enumerate}
+
+Once the pendulum is swinging, an interplay between kinetic energy and gravitational potential energy keeps the system in motion. Kinetic energy initiates motion by the initial displacement or initial forces that perturbed the system from its equilibrium position, while the gravitational potential tries to restore the bob to its equilibrium position. This interplay will continue indefinitely, unless damping forces, eventually, stop the pendulum from moving. Friction on the pivot or drag -- if the pendulum is partially or totally submerged in a viscous fluid -- are examples of damping forces.
+
+\section{Objective}
 To seek for a mathematical relation, perhaps in a closed form, to predict the pendulum amplitude variation with time; \ie, deduce a function of the form $\theta\vat t$. 
