--- a/modeling/sections/abstract.tex
+++ b/modeling/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-Abstract goes here :) In the following, the introduction to each section contains the action plan, while the subsections are the plan applied to an example: the motion of a gravitational pendulum.
+Abstract goes here :)
 \end{abstract}
