--- a/modeling/sections/formulation.tex
+++ b/modeling/sections/formulation.tex
@@ -3,19 +3,21 @@ A swinging gravitational pendulum is an instance of a dynamics process, since a 
 
 There are two main cases to consider when studying the motion of a gravitational pendulum: undamped motion, where no frictional forces and no drag are taken into account, and damped motion, where frictional forces or drag are considered. In both cases, however, the interplay between kinetic energy and gravitational potential must be regarded, since it drives motion.
 
-To uncover the relationships between the different physical quantities that affect the pendulum motion, one firstly has to propose them; then, join them as dimensionless quantities and, finally, use physical considerations and order of magnitude analysis to restrain the physical model to thus decrease complexity. The last step will pave the path to a precise mathematical model.
+To uncover the relationships between the different physical quantities that affect the pendulum motion, we follow a plan: propose the quantities that may affect motion; then, join them as dimensionless quantities and, finally, use physical considerations and order of magnitude analysis to restrain the physical model, decreasing thus complexity. The last step will pave the path to a precise mathematical model.
 
 
 %%% LATEX vars used in the following
 \newcommand{\angpos}{\theta}     % angular position
 \newcommand{\angvel}{\dt\theta}  % angular velocity
 \newcommand{\angacc}{\ddt\theta} % angular acceleration
+\newcommand{\torque}{\tau}       % torque
+\newcommand{\fcoeff}{\alpha}     % friction coefficient
 
 
-\subsection{Dimensional and order of magnitude analyses}
-First, one can hypothesize that the pendulum bob hangs by a massless, frictionless and inflexible rod. This implies that the system center of gravity will coincide with the bob center of gravity (massless rod), that no damping due to friction will happen and that the bob will trace a circular orbit of radius equal to the length of the rod (inflexible rod).
+\subsection{Dimensional and order of magnitude analyses}\label{subsec:dimanalysisorderofmag}
+We consider first the most complex case: a gravitational pendulum hanging by a massive rod joint to a dry and clean pivot. The pendulum swings through a viscous fluid.
 
-Since the problem belongs to dynamics, we choose the dimensional set $\elset{\phdim L, \phdim M, \phdim T}$, with a cardinality of three. Next, let us list the possible physical quantities that may influence the pendulum motion together with their symbols and dimensions, see \cref{tab:quantitiesgravpendulum}.
+Since the problem belongs to dynamics, we choose the dimensional set $\elset{\phdim L, \phdim M, \phdim T}$, with a cardinality of three. Next, let us list the possible physical quantities that may influence the pendulum motion together with their symbols and dimensions~\footnote{~The equation for the friction at the pivot is $\torque = \fcoeff\mass\grav\radius$, where $\fcoeff$ is the friction coefficient, $\mass$ the mass supported by the pivot and $\radius$ the radius of the axis or rod supporting the pivot.}, see \cref{tab:quantitiesgravpendulum}.
 %
 % ------------------------------------------------------------- PreTable
 \docpretable{bt}{0.5\textwidth}{lcc}%
@@ -27,12 +29,15 @@ pendulum amplitude        & $\angpos$          & $ 1$ \\
 initial amplitude         & $\angpos_0$        & $ 1$ \\
 time                      & $t$                & $\phdim T$ \\
 free fall acceleration    & $\grav$            & $\phdim L/\phdim T^2$ \\
-rod length                & $\length$          & $\phdim L$ \\
+rod length                & $\length\txt{rod}$ & $\phdim L$ \\
+rod mass                  & $\mass\txt{rod}$   & $\phdim M$ \\
+torque at pivot           & $\torque$          & $\phdim M\phdim L^2/\phdim T$ \\
+pivot friction coefficient & $\fcoeff$         & $ 1$ \\
 bob mass                  & $\mass\txt{bob}$   & $\phdim M$ \\
 bob density               & $\dens\txt{bob}$   & $\phdim M/\phdim L^3$ \\
 bob diameter              & $\diam\txt{bob}$   & $\phdim L$ \\
 fluid density             & $\dens\txt{fl}$    & $\phdim M\phdim L^3$ \\
-fluid dynamic viscosity   & $\dynvis\txt{fl}$  & $\phdim M/\phdim L\phdim T$ \\
+fluid dynamic viscosity   & $\dynvis$          & $\phdim M/\phdim L\phdim T$ \\
 \bottomrule
 %
 \end{tabularx}
@@ -47,81 +52,115 @@ A first approach may be to model the pendulum amplitude by a function $f$ of the
             \angpos_0,
             t,
             \grav,
-            \length,
+            \length\txt{rod},
+            \mass\txt{rod},
+            \torque,
+            \fcoeff,
             \mass\txt{bob},
             \dens\txt{bob},
             \diam\txt{bob},
             \dens\txt{fl},
-            \dynvis\txt{fl}
+            \dynvis
 }\,.
 \eeq
-This complex relationship can be organized by means of using dimensional analysis.
+This complex relationship can be organized by means of dimensional analysis. 
 
-To begin with, since $\dens\txt{bob}$, $\mass\txt{bob}$ and $\diam\txt{bob}$ are related, we can keep two of the three quantities. We keep diameter and density. Then, note that there are 6 physical quantities and 3 independent dimensions. Thus, according to the Pi-theorem, the number of dimensionless quantities that can be formed is $9 - 3 = 6$. These quantities are
-\beq
-\kdim_1 = \angpos\,,\quad
-\kdim_2 = \angpos_0\,,\quad
-\kdim_3 = \dfrac{\diam}{\length}\,,\quad
-\kdim_4 = \dfrac{\dens\txt{fl}}{\dens\txt{bob}}\,,\quad
-\kdim_5 = t\sqrt{\dfrac{\grav}{\length}}\,,\quad
-\kdim_6 = \dfrac{\dens\txt{fl}\diam\sqrt{\length\grav}}{\dynvis}\,.
-\eeq
-Again, according to the Pi-theorem, the mathematical function we seek is of the \emph{form}:
-\beq
-\angpos = \kdimf\vat{\angpos_0, 
-            \dfrac{\diam}{\length}, 
-            \dfrac{\dens\txt{fl}}{\dens\txt{bob}}, 
-            t\sqrt{\dfrac{\grav}{\length}}, 
-            \dfrac{\dens\txt{fl}\diam\sqrt{\length\grav}}{\dynvis}}\,.
-\eeq
+To begin with, since $\dens\txt{bob}$, $\mass\txt{bob}$ and $\diam\txt{bob}$ are related, we can keep two of the three quantities. We keep diameter and density. With this reduction, there are 12 physical quantities and 3 independent dimensions. Thus, according to the Pi-theorem, the number of dimensionless quantities that can be formed is $12 - 3 = 9$. These dimensionless quantities may be chosen as
+\begin{align*}
+&\kdim_1 = \angpos\,,\,
+ \kdim_2 = \angpos_0\,,\,
+ \kdim_3 = t\sqrt{\dfrac{\grav}{\length}}\,,\,\\
+&\kdim_4 = \fcoeff\,,\,
+ \kdim_5 = \dfrac{\mass\txt{rod}}{\mass\txt{bob}}\,,\,
+ \kdim_6 = \dfrac{\left(\mass\txt{bob} + \mass\txt{rod}\right)\grav\length\txt{rod}}{\torque}\,,\,\\
+&\kdim_7 = \dfrac{\diam}{\length}\,,\,
+ \kdim_8 = \dfrac{\dens\txt{fl}}{\dens\txt{bob}}\,,\,
+ \kdim_9 = \dfrac{\dens\txt{fl}\diam\sqrt{\length\grav}}{\dynvis}\,.
+\end{align*}
+See that $\kdim_1$ contains the quantity being sought, $\angpos$, that $\kdim_2$ the quantity that originates motion, $\angpos_0$, and $\kdim_3$ the (independent) quantity against which we confront motion, $t$. Now, again using the Pi-theorem, the mathematical function we seek, $\kdimf$, is of the \emph{form}:
+\begin{equation}\label{eq:fullgravpendulummodel}
+\angpos = \kdimf\vat{
+            \angpos,
+            \angpos_0,
+            t\sqrt{\dfrac{\grav}{\length}},
+            \fcoeff,
+            \dfrac{\mass\txt{rod}}{\mass\txt{bob}},
+            \dfrac{\left(\mass\txt{bob} + \mass\txt{rod}\right)\grav\length\txt{rod}}{\torque},
+            \dfrac{\diam}{\length},
+            \dfrac{\dens\txt{fl}}{\dens\txt{bob}},
+            \dfrac{\dens\txt{fl}\diam\sqrt{\length\grav}}{\dynvis}
+            }\,.
+\end{equation}
 
-Now, we use order of magnitude analysis to further restrain the physical model so to simplify the mathematical model. We assume:
-\begin{itemize}
-\item $\length\gg\diam$, then $\diam/\length\to 0$. The validity of this assumption depends on one's tolerance; \eg, if the bob diameter is, say, $\SI{5}{cm}$ and the rod length $\SI{1}{m}$, then the ratio $\diam/\length = 0.05$, which might be discarded for some purposes.
-%
-\item $\dens\txt{bob}\gg\dens\txt{fl}$, then $\dens\txt{fl}/\dens\txt{bob}\to 0$. Say, for instance, that the bob is made of steel and swings through air at $\SI{15}{\celsius}$ and at sea level, then 
+To reduce the complexity of the mathematical model, we can restrain the physical model by working on the pendulum, by doing order of magnitude analysis and by making assumptions.
+
+First, friction at the pivot can be reduced by properly lubricating the joint between the pivot and the rod. With this, the frictional torque term disappears -- a frictionless pivot. To support this assumption, let us bring some numbers. A dry and clean joint of steel pivot and steel rod has a friction coefficient of 0.80, while when the joint is lubricated the coefficient decreases to 0.16.
+
+Next, the rod may be build of a strong material; strong enough to support the bob without elongating. This will allow the construction of a very thin rod. This implies, in turn, that the ratio of masses can be neglected -- a massless, inflexible rod.
+
+We use now order of magnitude analysis to further restrain the model. Consider that the rod length is much greater than the bob length. This is possible since we are building the pendulum with a very strong rod. Some numbers: if the bob diameter is, say, $\SI{5}{cm}$ and the rod length $\SI{1}{m}$, then the ratio $\diam/\length = 0.05$.
+
+Our pendulum may be swinging through air. Then, the bob density will be greater than the air density. For instance, if the bob is made of steel and swings through air at $\SI{15}{\celsius}$ and at sea level, then 
 \beq
 \dens\txt{air}/\dens\txt{steel} = \SI{1.225}{kg/m^3}/\SI{7750}{kg/m^3} \sim \num{0.158e-4}\,, 
 \eeq
-which can be ignored. However, if the steel bob swings through oil with $\dens\txt{oil} = \SI{850}{kg/m^3}$, then 
-\beq
-\dens\txt{oil}/\dens\txt{steel} = \SI{850}{kg/m^3}/\SI{7750}{kg/m^3} \sim \num{0.110}\,, 
-\eeq
-which may be important for some applications.
-%
-\item an inviscid fluid. An inviscid fluid is a fluid with no viscosity, then 
-\beq
-\dens\txt{fl}\diam\sqrt{\length\grav}/\dynvis = 0\,. 
-\eeq
-The validity of this assumption will also depend on the circumstances.
-\end{itemize}
+which can be ignored~\footnote{~However, if the steel bob swings through oil with $\dens\txt{oil} = \SI{850}{kg/m^3}$, then $\dens\txt{oil}/\dens\txt{steel} = \SI{850}{kg/m^3}/\SI{7750}{kg/m^3} \sim \num{0.110}$, which may be important for some applications.}.
 
-Then, after having restrained the physical model, we seek for a mathematical function of the form
+Air can be considered as an inviscid fluid. An inviscid fluid is a fluid with no viscosity, then drag will not be crucial. To back up this assumption, plug some typical values into $\kdim_9$:
 \beq
+\dfrac{\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}}{\dynvis}
+= \dfrac{1.225\times 0.05\sqrt{1.00\times 9.80665}}{\num{1.983e-5}}
+\sim \num{9672} \,,
+\eeq
+where values in SI units were used. It can be seen that inertial forces, $\dens\txt{air}\diam\txt{bob}\sqrt{\length\grav}$, are much larger than viscous forces, $\dynvis$, meaning that the latter may be safely discarded.
+
+As a side note, considering the pivot to be frictionless and no drag present -- undamped pendulum case -- implies that mechanical energy is conserved. Then, the system may be analyzed using Lagrange formulation of mechanics, instead of Newton formulation.
+
+Finally, after having restrained the physical model, we seek for a mathematical function of the form
+\begin{equation}\label{eq:simplegravpendulumdimanalysis}
 \angpos = \kdimf\vat{
             \angpos_0, 
             t\sqrt{\dfrac{\grav}{\length}}
             }\,.
-\eeq
+\end{equation}
+Neither dimensional analysis nor order of magnitude analysis can help to find the functional form of $\kdimf$. It must be found by a more refined theoretical analysis or by experimentation. However, our assumptions, based on sensible assumptions, have reduced the complex, physical model by passing from 13 dimensional quantities to 3 dimensionless quantities. At the end of the day, however, only confrontation of the model with experimental data will provide the accuracy of the reductions we have done.
 
-The functional form of $\kdimf$ must be found by a more refined theoretical analysis or by experimentation. However, dimensional analysis reduced the complex model by passing from ten to six dimensionless quantities. Moreover, order of magnitude analysis further limited the model to two dimensionless quantities. The physical model is more restricted, but based on sensible assumptions. At the end, only confrontation of the model with experimental data will provide the accuracy of the reductions made.
-
-
-\subsection{Mathematical interpretation}
-The mathematical model wishes to find a function to predict the pendulum amplitude variation with time: $\angpos = \angpos\vat t$.
-
-Now, based on the previous section, we can combine all the previous assumptions by defining a \lingo{simple gravitational pendulum} as a pendulum composed of a massive bob of mass $\mass$ hanging by a massless, frictionless and inflexible rod of length $\length$ attached to a frictionless pivot. Under the influence of gravitational interactions, the pendulum swings through an inviscid fluid of negligible density.
-
-The last definition leads to a very restricted physical model. However, this will allow us to finally find a closed form for the pendulum amplitude.
+Some final words. \Cref{eq:simplegravpendulumdimanalysis} may seem, at first sight, a very restricted model. However, it is a practical one: the pendulum of a longcase clock. Such a clock consists of a heavy bob hanging by a light, inflexible and practically massless rod. The pendulum swings inside a case full of air.
 
 
-\subsection{Mathematical model}
-Consider a simple gravitational pendulum composed of a bob of mass $\mass$ and a rod of length $\length$. Let $\angpos$ be the amplitude of the pendulum for any time $t$. Let the initial angle be $\angpos_0$ and the initial velocity be $\angvel_0 = 0$. Finally, let $\grav$ be the free fall acceleration. Then, find the equation of motion for the pendulum.
+\subsection{Mathematical interpretation}\label{subsec:mathinterpretation}
+For the gravitational pendulum, we begun seeking a mathematical relationship of the form presented in \cref{eq:fullgravpendulummodel}. Then, after sensible physical considerations were made, we ended with a restricted model of the form \cref{eq:simplegravpendulumdimanalysis}. 
+
+The physical considerations we made translate mathematically into
+\begin{itemize}
+%
+\item A frictionless pivot implies no torque. Thus, $\kdim_4 = \kdim_6 = 0$.
+%
+\item A massive bob hanging of a massless and inflexible rod implies that $\kdim_5 = 0$.
+%
+\item A bob diameter much smaller than rod length results in $\kdim_7 = 0$.
+%
+\item A bob made of steel swinging through air, air being less dense than steel, gives $\kdim_8 = 0$.
+%
+\item Air considered as inviscid, implies no viscosity, thus no drag. Therefore, $\kdim_9 = 0$.
+%
+\end{itemize}
+
+Finally, for the sake of mathematical purposes, we can combine all the previous assumptions by defining a \lingo{simple gravitational pendulum}:
+\begin{quote}
+a simple gravitational pendulum is a pendulum composed of a massive bob of mass $\mass$ hanging by a massless, frictionless and inflexible rod of length $\length$ attached to a frictionless pivot. Under the influence of gravitational interactions, the pendulum swings through an inviscid fluid of negligible density.
+\end{quote}
+
+
+\subsection{Mathematical model}\label{subsec:mathmodel}
+In this section, we deduce the equation of motion for a simple gravitational pendulum by means of Lagrange formulation mechanics. Writing down the Lagrangian is possible due to the fact that the system is assumed to be undamped -- conservative; \ie, neither friction nor drag are considered. Additionally, we assume that the pendulum is set into motion by displacing the bob an initial angle $\angpos_0$ with no further forces, $\angvel_0 = 0$.
+
+Consider a simple gravitational pendulum composed of a bob of mass $\mass$ and a rod of length $\length$. Let $\angpos$ be the amplitude of the pendulum for any time $t$, let the initial angle be $\angpos_0$ and the initial velocity be $\angvel_0 = 0$ and, finally, let $\grav$ be the free fall acceleration. Then, find the equation of motion for the pendulum.
 
 %\begin{solution}
-Using $\angpos$ as the generalized position and $\angvel$ as the generalized velocity, write the Lagrangian for the system:
+Using $\angpos$ as the generalized position and $\angvel$ as the generalized velocity, write down the Lagrangian for the system:
 \beq
-\lag = \dfrac{1}{2}\mass\length^2\angvel^2 - \mass\grav\length\cos\vat{\angpos}\,.
+\lag = \dfrac{1}{2}\mass\length^2\angvel^2 - \mass\grav\length\left(1 - \cos\vat{\angpos}\right)\,.
 \eeq
 Find next the generalized momentum and its temporal change
 \beq
@@ -134,17 +173,24 @@ Calculate the generalized force:
 \eeq
 Replace the generalized force and the temporal change of the generalized momentum in the Euler-Lagrange equation to find:
 \beq
-\elop{\angpos}{\angvel}\lag = \mass\length^2\angacc + \mass\grav\length\sin\vat\angpos = 0\,.
+\elop{\angpos}{\angvel}\lag = \ipd{\angpos}{\lag} - \iod{t}\ipd{\angvel}{\lag}
+    = - \mass\grav\length\sin\vat\angpos - \mass\length^2\angacc = 0 \implies
+    \mass\length^2\angacc + \mass\grav\length\sin\vat\angpos = 0\,.
 \eeq
 Since $\mass\length > 0$, divide the last equation through $\mass\length^2$ to have
 \beq
 \angacc + \dfrac{\grav}{\length}\sin\vat\angpos = 0\,,
 \eeq
-object to the initial conditions $\angpos\vat 0 = \angpos_0$ and $\angvel\vat 0 = 0$.
+object to the initial conditions $\angpos\vat 0 = \angpos_0$ and $\angvel\vat 0 = \angvel_0 = 0$. Finally, rewrite the last equation as
+\begin{equation}\label{eq:mathmodelsimppend}
+  \begin{dcases}
+    \nxod{2}{\angpos}{t}\vat t + \dfrac{\grav}{\length}\sin\vat{\angpos\vat t} = 0\,,\\
+    \angpos\vat 0 = \angpos_0\,,\\
+    \xod\angpos t\vat 0 = \angvel_0 = 0\,.
+  \end{dcases}
+\end{equation}
 %\end{solution}
 
-Note that we deduced the equation by means of Lagrangian mechanics. Writing down the Lagrangian was possible due to the fact that the system was assumed to be conservative; \ie, neither friction nor drag were considered.
 
-
-\subsection{Assumptions}
-The equation of motion for the pendulum was found using the following assumptions:
+\subsection{Assumptions}\label{subsec:assumptions}
+The equation of motion for the pendulum was found using the assumptions made in \cref{subsec:dimanalysisorderofmag} and summarized in \cref{subsec:mathinterpretation}.
